--- a/css/flexBox.css
+++ b/css/flexBox.css
@@ -33,7 +33,7 @@ header {
     background-color: #0056b3;
 }
 .banner{
-    background-image: url(/assets/banner.png); 
+    background-image: url(assets/banner.png); 
     background-size: cover;
     background-position: center;
     height: 500px;
